# flexfloat-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: bench.yml  release.yml  test.yml
benches/: agm_pi.rs  bitarray_backends.rs
dev/bench/macos-latest/: data.js
dev/bench/ubuntu-latest/: data.js
dev/bench/windows-latest/: data.js
examples/: agm_pi.rs  basics.rs  conversions.rs  growable_exponent.rs  math_functions.rs
scripts/: bump-version.sh  criterion-to-bencher.sh  install-hooks.sh
src/: lib.rs  test_support.rs
src/bitarray/: bit_ref.rs  boolean_list.rs  mod.rs  static_bit_array.rs  static_boolean_array.rs  usize_list.rs
src/bitarray/backend/: mod.rs  primitives.rs
src/bitarray/traits/: access.rs  arith.rs  construction.rs  conversion.rs  manipulation.rs  mod.rs  rounding.rs
src/flexfloat/: accessors.rs  arithmetic.rs  classify.rs  cmp.rs  construct.rs  consts.rs  converter.rs  display.rs  error.rs  internal.rs  math.rs  mod.rs  order.rs
src/flexfloat/arithmetic/: add_sub.rs  mod.rs  mul_div.rs  neg_abs.rs  normalize.rs  rem.rs  sums.rs
src/flexfloat/math/: exponential.rs  hyperbolic.rs  mod.rs  power.rs  rounding.rs  trigonometry.rs  utils.rs
tests/: backend_consistency.proptest-regressions  backend_consistency.rs  extreme_values.rs
