[package]
name = "flexfloat"
version = "0.1.0"
edition = "2024"

[features]
default = ["bigint"]
bigint = ["dep:num-bigint"]

[dependencies]
num-bigint = { version = "0.4.3", optional = true }

[dev-dependencies]
rand = "0.9.2"
rstest = "0.26.1"
num-bigint = { version = "0.4.3", features = ["rand"] }