[package]
name = "flexfloat"
version = "1.0.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ferranSanchezLlado/flexfloat-rs"
homepage = "https://github.com/ferranSanchezLlado/flexfloat-rs"
description = "A Rust library for arbitrary-precision floating-point arithmetic with growable exponents and fixed-size fractions, extending IEEE 754 double-precision range."
keywords = ["float", "bigfloat", "arbitrary-precision", "flexible", "custom"]
categories = ["data-structures", "mathematics", "science", "finance", "rust-patterns"]
edition = "2024"
rust-version = "1.85"
exclude = [".github/*"]

[features]
default = []

[dependencies]
num-bigint = { version = "0.4.3" }
num-traits = "0.2.19"

[dev-dependencies]
rand = "0.9.2"
rstest = "0.26.1"
num-bigint = { version = "0.4.3", features = ["rand"] }
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bitarray_backends"
harness = false

[[bench]]
name = "agm_pi"
harness = false
